# DenDenMailBackend

./: .pre-commit-config.yaml  .ruff.toml  README.md  WINDOWS_README.md  alembic.ini  pyproject.toml  pyrightconfig.json  run_test_windows.bat
.github/: dependabot.yml
.github/instructions/: documentation.instructions.md  project.instructions.md  python_coding.instructions.md
.github/workflows/: lint.yml
app/: app_conf.py  app_resources.py  errors.py  main.py
app/dtos/: chat.py  demo.py  demo_mail.py  demo_rules.py  mail_dto.py  messages.py  rules.py  rules_dto.py  search.py  summary.py  summary_dto.py
app/dtos/shared/: __init__.py  base.py
app/models/: _message_registry.py  address.py  common.py  folder.py  mail.py  message.py  message_address_map.py  message_part.py  message_tag_map.py  message_word.py  priority_person.py  priority_word.py  summary.py  tag.py  vendor.py
app/models/migrations/: env.py
app/routers/: __init__.py  chat.py  demo.py  demo_mail.py  demo_rules.py  demo_summary.py  messages.py  rules.py  search.py  summary.py
app/services/ai/: ai_models.py  load_model.py
app/services/database/: README.md  __init__.py  base.py  database_service.py  engine.py  helpers.py  mail_crud.py  seed.py  summary_crud.py
app/services/mail/: base.py
app/usecases/: __init__.py  chat.py  errors.py  get_list_obj.py  mail.py  message.py  summary.py  update_by_id.py
app/utils/check_implementation/: __init__.py  _check_implementation.py
app/utils/log_config/: __init__.py  get_logger.py  log_config.py
app/utils/logging/: log_config.py
demo/: README.md  __init__.py  check_langchain.py  document_detail_test.py  document_processor.py  eml_reader.py  generator.py  integration_test.py
demo/eml_files/: .gitkeep  feature_release.eml  meeting_email.eml  system_maintenance.eml
docs/: progress.md  tables.md
docs/analysis/: priorityperson_integrity_error.md
docs/app/: endpoints.md  functions.md  overview.md  tables.md
examples/: vector_database_usage.py
scripts/: test_chat_sse.py
study/: _sqlmodel.py  con_thunderbird.py  langgraph_flow.py  test_langgraph_flow.py
(+40 files in other folders)
