[project]
name = "ai-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.6",
    "optimum[nncf,openvino]>=1.27.0",
    "pydantic[email]>=2.11.7",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "ruff>=0.12.1",
    "uvicorn>=0.34.3",
]
