[project]
name = "ai-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.3.4",
    "fastapi>=0.115.14",
    "huggingface-hub[hf-xet]>=0.34.4",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openvino-genai",
    "langgraph>=0.6.6",
    "openvino>=2025.3.0",
    "optimum[nncf,openvino]>=1.27.0",
    "pydantic[email]>=2.11.7",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "sqlmodel>=0.0.24",
    "transformers>=4.53.3",
]

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "ruff>=0.12.1",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.3",
]

[tool.taskipy.tasks]
migration = "alembic upgrade head" 
dev = "cd app && uv run uvicorn main:app --reload"
fmt = "uv run ruff check --fix && uv run ruff format"
type = "uv run pyright app"

[tool.uv.sources]
langchain-openvino-genai = { git = "https://github.com/KTC-Security-Circle/langchain-openvino-genai.git" }
